--- a/about.html
+++ b/about.html
@@ -30,9 +30,9 @@
     </section>
     <section id="background-img" class="blur"></section>
     <section id="containerXD">
-        <div id="containerXD-title">Visit</div>
+        <div id="containerXD-title">Welcome to the Gallary</div>
         <div class="aboutboxs">
-            <p class="Greeting">Welcome to the Gallary</p>
+            <!-- <p class="Greeting">Welcome to the Gallary</p> -->
             <p>We are pleased to announce that the Gallery is open.</p>
             <p>Please read <a href="/rentthegallary.html">RENT THE GALLARY</a> Corner to know more about our rent procedure. Please note that we will be closed on Mondays.</p>
         </div>
